# rayni

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .sork  CMakeLists.txt  README.md  meson.build  meson_options.txt
cmake/: gtest.cmake  lib.cmake  librayni.cmake
src/: config.h.in  git_describe_version.h.in  meson.build
src/lib/: color.cpp  color.h  image.cpp  image.h  intersectable.h  intersection.h  intersection_structure.cpp  intersection_structure.h  log.cpp  log.h  meson.build  stopwatch.h  version_info.cpp  version_info.h  version_info.h.in
src/lib/concurrency/: barrier.h  cancellable.h  latch.h  thread_pool.cpp  thread_pool.h
src/lib/containers/: cache_line_aligned_vector.h  fixed_size_stack.h  listener_list.h  variant.cpp  variant.h
src/lib/file_formats/: binary_reader.cpp  binary_reader.h  binary_type_reader.h  exr.cpp  exr.h  exr_reader.cpp  exr_reader.h  file_format_exception.h  image.cpp  image.h  image_format.cpp  image_format.h  image_reader.cpp  image_reader.h  jpeg.cpp  jpeg.h  jpeg_reader.cpp  jpeg_reader.h  json.cpp  json.h  json_reader.cpp  json_reader.h  ply.cpp  ply.h  ply_reader.cpp  ply_reader.h  png.cpp  png.h  png_reader.cpp  png_reader.h  png_writer.cpp  png_writer.h  text_reader.cpp  text_reader.h  text_type_reader.h  tga.cpp  tga.h  tga_reader.cpp  tga_reader.h  webp.cpp  (+5 more)
src/lib/file_formats/image/: exr_reader.cpp  exr_reader.h  image_format.cpp  image_format.h  image_reader.cpp  image_reader.h  jpeg_reader.cpp  jpeg_reader.h  png_reader.cpp  png_reader.h  png_writer.cpp  png_writer.h  tga_reader.cpp  tga_reader.h  webp_reader.cpp  webp_reader.h
src/lib/file_formats/object/: ply_reader.cpp  ply_reader.h
src/lib/function/: result.h  scope_exit.h
src/lib/graphics/: color.cpp  color.h  image.cpp  image.h
src/lib/intersection_structures/: bvh.cpp  bvh.h  kdtree.cpp  kdtree.h
src/lib/io/: binary_reader.cpp  binary_reader.h  binary_type_reader.h  file.cpp  file.h  io_exception.h  text_reader.cpp  text_reader.h  text_type_reader.h
src/lib/math/: aabb.cpp  aabb.h  animated_transform.cpp  animated_transform.h  big_endian_reader.h  bitmask.h  decomposed_matrix4x4.cpp  decomposed_matrix4x4.h  enum.h  hash.h  lerp.h  math.h  matrix3x3.h  matrix4x4.cpp  matrix4x4.h  matrix_inverse.h  numeric_cast.h  polar_decomposition.h  quaternion.cpp  quaternion.h  ray.h  transform.cpp  transform.h  vector3.cpp  vector3.h  vector4.h
src/lib/shapes/: triangle_mesh_data.cpp  triangle_mesh_data.h
src/lib/string/: base85.cpp  base85.h  duration_format.cpp  duration_format.h  split.cpp  split.h  string.cpp  string.h
src/lib/system/: command.cpp  command.h  command_posix.cpp  command_windows.cpp  main_loop.cpp  main_loop.h  memory_mapped_file.cpp  memory_mapped_file.h  scoped_temp_dir.cpp  scoped_temp_dir.h  temp_dir.cpp  temp_dir.h  temp_dir_posix.cpp  temp_dir_windows.cpp  unique_fd.h
src/lib/system/linux/: epoll.h  event_fd.h  pipe.h  timer_fd.h
src/lib/time/: duration_format.cpp  duration_format.h  duration_formatter.cpp  duration_formatter.h  scoped_stopwatch.cpp  scoped_stopwatch.h  stopwatch.cpp  stopwatch.h
src/unit_tests/lib/: color.cpp  expect_real_eq.h  image.cpp  meson.build  stopwatch.cpp  version_info.cpp
src/unit_tests/lib/concurrency/: barrier.cpp  cancellable.cpp  latch.cpp  thread_pool.cpp
src/unit_tests/lib/containers/: cache_line_aligned_vector.cpp  fixed_size_stack.cpp  listener_list.cpp  variant.cpp
src/unit_tests/lib/file_formats/: binary_reader.cpp  binary_type_reader.cpp  exr.cpp  exr_reader.cpp  image.cpp  image_format.cpp  image_reader.cpp  jpeg.cpp  jpeg_reader.cpp  json.cpp  json_reader.cpp  ply.cpp  ply_reader.cpp  png.cpp  png_reader.cpp  png_writer.cpp  text_reader.cpp  text_type_reader.cpp  tga.cpp  tga_reader.cpp  webp.cpp  webp_reader.cpp  write_to_file.cpp
src/unit_tests/lib/file_formats/image/: exr_reader.cpp  image_format.cpp  image_reader.cpp  jpeg_reader.cpp  png_reader.cpp  png_writer.cpp  tga_reader.cpp  webp_reader.cpp
src/unit_tests/lib/file_formats/object/: ply_reader.cpp
src/unit_tests/lib/function/: result.cpp  scope_exit.cpp
src/unit_tests/lib/graphics/: color.cpp  image.cpp
src/unit_tests/lib/io/: binary_reader.cpp  binary_type_reader.cpp  file.cpp  text_reader.cpp  text_type_reader.cpp
src/unit_tests/lib/math/: aabb.cpp  animated_transform.cpp  big_endian_reader.cpp  bitmask.cpp  decomposed_matrix4x4.cpp  enum.cpp  hash.cpp  lerp.cpp  math.cpp  matrix3x3.cpp  matrix4x4.cpp  numeric_cast.cpp  polar_decomposition.cpp  quaternion.cpp  transform.cpp  vector3.cpp  vector4.cpp
src/unit_tests/lib/shapes/: triangle_mesh_data.cpp
src/unit_tests/lib/string/: base85.cpp  duration_format.cpp  split.cpp  string.cpp
src/unit_tests/lib/system/: command.cpp  main_loop.cpp  memory_mapped_file.cpp  scoped_temp_dir.cpp  temp_dir.cpp  unique_fd.cpp
src/unit_tests/lib/system/linux/: epoll.cpp  event_fd.cpp  pipe.cpp  timer_fd.cpp
src/unit_tests/lib/time/: duration_format.cpp  duration_formatter.cpp  scoped_stopwatch.cpp  stopwatch.cpp
tools/: analyze.py  compile_commands.py  download_scene_data.py  meson.build  perf.sh  perfstat.sh  printasm.py  progress_printer.py  style_check.py
