lib_dependencies = [
    dependency('libjpeg', version : '>=1.5.0'),
    dependency('libpng', version : '>=1.6'),
    dependency('libwebp', version : '>=0.4'),
    dependency('OpenEXR', version : '>=2.2.0')
]

if target_machine.system() != 'windows'
    system = 'posix'
else
    system = 'windows'
endif

lib_sources = [
    'color.cpp',
    'color.h',
    'containers/fixed_size_stack.h',
    'containers/listener_list.h',
    'containers/variant.cpp',
    'containers/variant.h',
    'file_formats/file_format_exception.h',
    'file_formats/image/exr_reader.cpp',
    'file_formats/image/exr_reader.h',
    'file_formats/image/image_format.cpp',
    'file_formats/image/image_format.h',
    'file_formats/image/image_reader.cpp',
    'file_formats/image/image_reader.h',
    'file_formats/image/jpeg_reader.cpp',
    'file_formats/image/jpeg_reader.h',
    'file_formats/image/png_reader.cpp',
    'file_formats/image/png_reader.h',
    'file_formats/image/png_writer.cpp',
    'file_formats/image/png_writer.h',
    'file_formats/image/tga_reader.cpp',
    'file_formats/image/tga_reader.h',
    'file_formats/image/webp_reader.cpp',
    'file_formats/image/webp_reader.h',
    'file_formats/json_reader.cpp',
    'file_formats/json_reader.h',
    'file_formats/text_reader.cpp',
    'file_formats/text_reader.h',
    'file_formats/write_to_file.cpp',
    'file_formats/write_to_file.h',
    'function/scope_exit.h',
    'image.cpp',
    'image.h',
    'math/aabb.cpp',
    'math/aabb.h',
    'math/animated_transform.cpp',
    'math/animated_transform.h',
    'math/big_endian_reader.h',
    'math/decomposed_matrix4x4.cpp',
    'math/decomposed_matrix4x4.h',
    'math/enum.h',
    'math/hash.h',
    'math/lerp.h',
    'math/math.h',
    'math/matrix3x3.h',
    'math/matrix4x4.cpp',
    'math/matrix4x4.h',
    'math/matrix_inverse.h',
    'math/quaternion.h',
    'math/ray.h',
    'math/transform.cpp',
    'math/transform.h',
    'math/vector3.h',
    'math/vector4.h',
    'string/base85.cpp',
    'string/base85.h',
    'string/string.cpp',
    'string/string.h',
    'system/command_' + system + '.cpp',
    'system/command.h',
    'system/scoped_temp_dir.cpp',
    'system/scoped_temp_dir.h',
    'system/temp_dir_' + system + '.cpp',
    'system/temp_dir.h',
    'time/duration_formatter.cpp',
    'time/duration_formatter.h',
    'time/scoped_stopwatch.cpp',
    'time/scoped_stopwatch.h',
    'time/stopwatch.cpp',
    'time/stopwatch.h',
    'version_info.cpp',
    'version_info.h',
    config_header,
    git_describe_version_header
]

lib = static_library('rayni',
                     dependencies : lib_dependencies,
                     include_directories : src_incdir,
                     sources : lib_sources,
                     pic : false)
