lib_deps = [
    dependency('libjpeg', version : '>=1.5.0'),
    dependency('libpng', version : '>=1.6'),
    dependency('libwebp', version : '>=0.4'),
    dependency('OpenEXR', version : '>=2.3.0')
]

lib_sources = [
    'concurrency/barrier.h',
    'concurrency/cancellable.h',
    'concurrency/latch.h',
    'concurrency/thread_pool.cpp',
    'concurrency/thread_pool.h',
    'containers/fixed_size_stack.h',
    'containers/listener_list.h',
    'containers/variant.cpp',
    'containers/variant.h',
    'file_formats/image/exr_reader.cpp',
    'file_formats/image/exr_reader.h',
    'file_formats/image/image_format.cpp',
    'file_formats/image/image_format.h',
    'file_formats/image/jpeg_reader.cpp',
    'file_formats/image/jpeg_reader.h',
    'file_formats/image/png_reader.cpp',
    'file_formats/image/png_reader.h',
    'file_formats/image/png_writer.cpp',
    'file_formats/image/png_writer.h',
    'file_formats/image/tga_reader.cpp',
    'file_formats/image/tga_reader.h',
    'file_formats/image/webp_reader.cpp',
    'file_formats/image/webp_reader.h',
    'file_formats/image_reader.cpp',
    'file_formats/image_reader.h',
    'file_formats/json_reader.cpp',
    'file_formats/json_reader.h',
    'file_formats/object/ply_reader.cpp',
    'file_formats/object/ply_reader.h',
    'function/scope_exit.h',
    'graphics/color.cpp',
    'graphics/color.h',
    'graphics/image.cpp',
    'graphics/image.h',
    'io/binary_reader.cpp',
    'io/binary_reader.h',
    'io/binary_type_reader.h',
    'io/file.cpp',
    'io/file.h',
    'io/io_exception.h',
    'io/text_reader.cpp',
    'io/text_reader.h',
    'io/text_type_reader.h',
    'math/aabb.h',
    'math/animated_transform.cpp',
    'math/animated_transform.h',
    'math/bitmask.h',
    'math/decomposed_matrix4x4.h',
    'math/enum.h',
    'math/hash.h',
    'math/lerp.h',
    'math/math.h',
    'math/matrix3x3.h',
    'math/matrix4x4.h',
    'math/matrix_inverse.h',
    'math/numeric_cast.h',
    'math/polar_decomposition.h',
    'math/quaternion.h',
    'math/ray.h',
    'math/transform.cpp',
    'math/transform.h',
    'math/vector3.h',
    'math/vector4.h',
    'shapes/triangle_mesh_data.cpp',
    'shapes/triangle_mesh_data.h',
    'string/base85.cpp',
    'string/base85.h',
    'string/split.cpp',
    'string/split.h',
    'string/string.cpp',
    'string/string.h',
    'system/command.cpp',
    'system/command.h',
    'system/linux/epoll.h',
    'system/linux/event_fd.h',
    'system/linux/pipe.h',
    'system/linux/timer_fd.h',
    'system/main_loop.cpp',
    'system/main_loop.h',
    'system/memory_mapped_file.cpp',
    'system/memory_mapped_file.h',
    'system/scoped_temp_dir.cpp',
    'system/scoped_temp_dir.h',
    'system/unique_fd.h',
    'time/duration_format.cpp',
    'time/duration_format.h',
    'time/stopwatch.h',
    'version_info.cpp',
    'version_info.h',
    config_header,
    git_describe_version_header
]

lib = static_library('rayni',
                     dependencies : lib_deps,
                     include_directories : src_incdir,
                     sources : lib_sources,
                     pic : false)

lib_dep = declare_dependency(include_directories : src_incdir,
                             link_with : lib)
