lib_deps = [
    dependency('libjpeg', version : '>=1.5.0'),
    dependency('libpng', version : '>=1.6'),
    dependency('libwebp', version : '>=0.4'),
    dependency('OpenEXR', version : '>=2.3.0')
]

version_info_header = vcs_tag(input : 'version_info.h.in',
                              output : 'version_info.h',
                              command : ['git', 'describe', '--always', '--first-parent', '--dirty'])

lib_sources = [
    'concurrency/barrier.h',
    'concurrency/cancellable.h',
    'concurrency/latch.h',
    'concurrency/thread_pool.cpp',
    'concurrency/thread_pool.h',
    'containers/fixed_size_stack.h',
    'containers/listener_list.h',
    'containers/variant.cpp',
    'containers/variant.h',
    'file_formats/exr_reader.cpp',
    'file_formats/exr_reader.h',
    'file_formats/image.cpp',
    'file_formats/image.h',
    'file_formats/jpeg.cpp',
    'file_formats/jpeg.h',
    'file_formats/json_reader.cpp',
    'file_formats/json_reader.h',
    'file_formats/ply_reader.cpp',
    'file_formats/ply_reader.h',
    'file_formats/png.cpp',
    'file_formats/png.h',
    'file_formats/tga.cpp',
    'file_formats/tga.h',
    'file_formats/webp.cpp',
    'file_formats/webp.h',
    'function/result.h',
    'function/scope_exit.h',
    'graphics/color.cpp',
    'graphics/color.h',
    'graphics/image.cpp',
    'graphics/image.h',
    'io/binary_reader.cpp',
    'io/binary_reader.h',
    'io/binary_type_reader.h',
    'io/file.cpp',
    'io/file.h',
    'io/io_exception.h',
    'io/text_reader.cpp',
    'io/text_reader.h',
    'io/text_type_reader.h',
    'math/aabb.h',
    'math/animated_transform.cpp',
    'math/animated_transform.h',
    'math/bitmask.h',
    'math/decomposed_matrix4x4.h',
    'math/hash.h',
    'math/lerp.h',
    'math/math.h',
    'math/matrix3x3.h',
    'math/matrix4x4.h',
    'math/matrix_inverse.h',
    'math/numeric_cast.h',
    'math/polar_decomposition.h',
    'math/quaternion.h',
    'math/ray.h',
    'math/transform.cpp',
    'math/transform.h',
    'math/vector3.h',
    'math/vector4.h',
    'shapes/triangle_mesh_data.cpp',
    'shapes/triangle_mesh_data.h',
    'stopwatch.h',
    'string/base85.cpp',
    'string/base85.h',
    'string/duration_format.cpp',
    'string/duration_format.h',
    'string/split.cpp',
    'string/split.h',
    'string/string.cpp',
    'string/string.h',
    'system/command.cpp',
    'system/command.h',
    'system/linux/epoll.h',
    'system/linux/event_fd.h',
    'system/linux/pipe.h',
    'system/linux/timer_fd.h',
    'system/main_loop.cpp',
    'system/main_loop.h',
    'system/memory_mapped_file.cpp',
    'system/memory_mapped_file.h',
    'system/scoped_temp_dir.cpp',
    'system/scoped_temp_dir.h',
    'system/unique_fd.h',
    config_header,
    version_info_header
]

lib = static_library('rayni',
                     dependencies : lib_deps,
                     include_directories : src_incdir,
                     sources : lib_sources,
                     pic : false)

lib_dep = declare_dependency(include_directories : src_incdir,
                             link_with : lib,
                             sources : [config_header, version_info_header])
