lib_unit_tests_sources = [
    'concurrency/barrier.cpp',
    'concurrency/cancellable.cpp',
    'concurrency/latch.cpp',
    'concurrency/thread_pool.cpp',
    'containers/fixed_size_stack.cpp',
    'containers/listener_list.cpp',
    'containers/variant.cpp',
    'file_formats/image/exr_reader.cpp',
    'file_formats/image/image_format.cpp',
    'file_formats/image/jpeg_reader.cpp',
    'file_formats/image/png_reader.cpp',
    'file_formats/image/png_writer.cpp',
    'file_formats/image/tga_reader.cpp',
    'file_formats/image/webp_reader.cpp',
    'file_formats/image_reader.cpp',
    'file_formats/json_reader.cpp',
    'function/scope_exit.cpp',
    'graphics/color.cpp',
    'graphics/image.cpp',
    'io/binary_reader.cpp',
    'io/binary_type_reader.cpp',
    'io/file.cpp',
    'io/text_reader.cpp',
    'io/text_type_reader.cpp',
    'math/aabb.cpp',
    'math/animated_transform.cpp',
    'math/bitmask.cpp',
    'math/decomposed_matrix4x4.cpp',
    'math/enum.cpp',
    'math/hash.cpp',
    'math/lerp.cpp',
    'math/math.cpp',
    'math/matrix3x3.cpp',
    'math/matrix4x4.cpp',
    'math/polar_decomposition.cpp',
    'math/quaternion.cpp',
    'math/transform.cpp',
    'math/vector3.cpp',
    'math/vector4.cpp',
    'string/base85.cpp',
    'string/split.cpp',
    'string/string.cpp',
    'system/command.cpp',
    'system/linux/epoll.cpp',
    'system/linux/event_fd.cpp',
    'system/linux/pipe.cpp',
    'system/linux/timer_fd.cpp',
    'system/main_loop.cpp',
    'system/scoped_temp_dir.cpp',
    'system/unique_fd.cpp',
    'time/duration_formatter.cpp',
    'time/scoped_stopwatch.cpp',
    'time/stopwatch.cpp',
    'version_info.cpp'
]

lib_unit_tests = executable('librayni-unit_tests',
                            include_directories : src_incdir,
                            dependencies : [gtest_dependency, lib_dependency],
                            sources : lib_unit_tests_sources)

test('librayni tests', lib_unit_tests)
