lib_unit_tests_sources = [
    'concurrency/barrier.cpp',
    'concurrency/cancellable.cpp',
    'concurrency/latch.cpp',
    'concurrency/thread_pool.cpp',
    'containers/fixed_size_stack.cpp',
    'containers/listener_list.cpp',
    'containers/variant.cpp',
    'file_formats/exr_reader.cpp',
    'file_formats/image.cpp',
    'file_formats/jpeg_reader.cpp',
    'file_formats/json_reader.cpp',
    'file_formats/ply_reader.cpp',
    'file_formats/png.cpp',
    'file_formats/tga.cpp',
    'file_formats/webp.cpp',
    'function/result.cpp',
    'function/scope_exit.cpp',
    'graphics/color.cpp',
    'graphics/image.cpp',
    'io/binary_reader.cpp',
    'io/binary_type_reader.cpp',
    'io/file.cpp',
    'io/text_reader.cpp',
    'io/text_type_reader.cpp',
    'math/aabb.cpp',
    'math/animated_transform.cpp',
    'math/bitmask.cpp',
    'math/decomposed_matrix4x4.cpp',
    'math/hash.cpp',
    'math/lerp.cpp',
    'math/math.cpp',
    'math/matrix3x3.cpp',
    'math/matrix4x4.cpp',
    'math/numeric_cast.cpp',
    'math/polar_decomposition.cpp',
    'math/quaternion.cpp',
    'math/transform.cpp',
    'math/vector3.cpp',
    'math/vector4.cpp',
    'shapes/triangle_mesh_data.cpp',
    'stopwatch.cpp',
    'string/base85.cpp',
    'string/duration_format.cpp',
    'string/split.cpp',
    'string/string.cpp',
    'system/command.cpp',
    'system/linux/epoll.cpp',
    'system/linux/event_fd.cpp',
    'system/linux/pipe.cpp',
    'system/linux/timer_fd.cpp',
    'system/main_loop.cpp',
    'system/memory_mapped_file.cpp',
    'system/scoped_temp_dir.cpp',
    'system/unique_fd.cpp'
]

lib_unit_tests = executable('librayni-unit_tests',
                            include_directories : src_incdir,
                            dependencies : [gtest_dep, lib_dep],
                            sources : lib_unit_tests_sources)

test('librayni tests', lib_unit_tests)
